Feat #3- proejto inicial pra subir e fazer testes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/teste2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>No Corre</title>
+  <meta name="description" content="NoCorre — o app que une treino, evolução e comunidade para corredores de todos os níveis. Entre na lista de espera!" />
+  <title>NoCorre</title>
 </head>
 
 <body>
